# otus_cpp

./: .travis.yml  CMakeLists.txt  Doxyfile  README.md  _c_make_lists_8txt.html  annotated.html  application_8cpp.html  application_8cpp__incl.map  application_8cpp__incl.md5  application_8h.html  application_8h__dep__incl.map  application_8h__dep__incl.md5  application_8h__incl.map  application_8h__incl.md5  application_8h_source.html  async.cpp  async.h  class_application-members.html  class_application.html  class_application__coll__graph.md5  class_controller-members.html  class_controller.html  class_controller__coll__graph.md5  class_document-members.html  class_document.html  class_document__coll__graph.md5  class_file_i_o-members.html  class_file_i_o.html  class_file_i_o__coll__graph.md5  class_file_i_o__inherit__graph.map  class_file_i_o__inherit__graph.md5  class_file_i_o_factory-members.html  class_file_i_o_factory.html  class_file_i_o_factory__coll__graph.map  class_file_i_o_factory__coll__graph.md5  class_file_i_o_jpeg-members.html  class_file_i_o_jpeg.html  class_file_i_o_jpeg__inherit__graph.map  class_file_i_o_jpeg__inherit__graph.md5  class_file_i_o_png-members.html  (+158 more)
client/: client_app.cpp  client_app.h
data/: kkmeans_ex.csv  sample.csv
include/: application.h  async_defs.h  command.h  command_observer.h  command_publisher.hpp  common_types.h  console_printer.h  controller.h  database.h  database_sql.h  document.h  event.h  exception.hpp  executor.h  executor_state.h  file_block.h  file_data.h  file_writer.h  filter.h  finder.h  flat.h  flat_clusterizator.h  hash_value.h  hasher.h  job.h  job_manager.h  k_means.h  lib_manager.h  mail_mapper.h  mail_reducer.h  mapper.h  model.h  point.h  publisher.hpp  reducer.h  server.hpp  session.hpp  stats_manager.h  task.h  thread_manager.h  (+4 more)
include/io/: file_io.h  file_io_factory.h
include/shapes/: shapes.h
lib/: CMakeLists.txt
lib/includes/: lib.h
lib/sources/: lib.cpp
lib/test/: CMakeLists.txt  test_version.cpp
memory_manager/: CMakeLists.txt
memory_manager/include/: memory_mgr.cpp  memory_mgr.h
memory_manager/src/: memory_mgr.cpp
memory_manager/test/: test_memory_mgr.cpp
my_allocator/: my_allocator.hpp
my_list/: my_list.hpp
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_3.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_3.js  classes_6.js  classes_7.js  classes_8.js  enums_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  files_1.js  files_3.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  searchdata.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  variables_0.js
src/: application.cpp  command.cpp  command_observer.cpp  common_types.cpp  console_printer.cpp  controller.cpp  database.cpp  database_sql.cpp  document.cpp  event.cpp  executor.cpp  executor_state.cpp  file_block.cpp  file_data.cpp  file_writer.cpp  filter.cpp  finder.cpp  flat.cpp  flat_clusterizator.cpp  hash_value.cpp  hasher.cpp  job.cpp  job_manager.cpp  k_means.cpp  lib_manager.cpp  mail_mapper.cpp  mail_reducer.cpp  matrix.cpp  matrix.hpp  model.cpp  rclss.cpp  rclst.cpp  stats_manager.cpp  task_mgr.cpp  thread_manager.cpp  thread_pool.cpp  thread_worker.cpp  threads.cpp  utils.cpp
src/io/: file_io.cpp  file_io_factory.cpp
src/shapes/: shapes.cpp
test/: test_async.h  test_executor.h  test_job_mgr.hpp  test_join.hpp  test_main.cpp  test_matrix.cpp  test_observer.h  test_task_mgr.hpp  test_task_processing.hpp  test_yamr.hpp
test/data/test_1/: CMakeLists.txt
test/data/test_2/: create_proj_copy2.sh  create_proj_copy_differ.sh
test/data/test_3/: timus_1496.cpp
test/data/test_3/test_3_1/: timus_1196_.cpp  timus_1545_.cpp
utils/: data_generator.py  data_plotter.py
